main/default/objects/Submission_Loss_Detail__c/Submission_Loss_Detail__c.object-meta.xml
<CustomObject>
    <label>Submission Loss Detail</label>
    <nameField>
        <displayFormat>LD-{000}</displayFormat>
        <label>Submission Loss Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submission Loss Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>