main/default/objects/Submission_Loss_Detail__c/fields/Account_Loss_Detail__c.field-meta.xml
<CustomField>
    <fullName>Account_Loss_Detail__c</fullName>
    <label>Account Loss Detail</label>
    <referenceTo>Account_Loss_Detail__c</referenceTo>
    <relationshipLabel>Submission Loss Details</relationshipLabel>
    <relationshipName>Submission_Loss_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>