main/default/objects/Submission_Loss_Detail__c/fields/Loss_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loss_Amount__c</fullName>
    <label>Loss Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>