main/default/objects/Submission_Loss_Detail__c/fields/Number_of_Losses_Formula__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Losses_Formula__c</fullName>
    <formula>IF(ISPICKVAL(Submission__r.StageName,&apos;Qualified&apos;),  Account_Loss_Detail__r.Number_of_Losses__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Losses Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>