main/default/objects/Submission_Loss_Detail__c/fields/Submission__c.field-meta.xml
<CustomField>
    <fullName>Submission__c</fullName>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Submission Loss Details</relationshipLabel>
    <relationshipName>Submission_Loss_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>