main/default/objects/Submission_Loss_Detail__c/validationRules/Year_must_be_a_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_must_be_a_number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(
LEN(Year__c) &gt; 0,
NOT(ISNUMBER(Year__c))
),(AND(ISNUMBER(Year__c),VALUE(Year__c) &lt;0)))</errorConditionFormula>
    <errorMessage>Only enter numeric values for Year</errorMessage>
</ValidationRule>